# ai-content-studio

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  INSTALL.md  README.md  REFACTORING_SUMMARY.md  SKILL.md  USER_MANUAL.md  audio_utils.py  config.example.json  content_studio.py  install_skill.sh  minimax_tts_tool.py  pyproject.toml  qwen_omni_studio.py  qwen_omni_tts_tool.py  qwen_tts_studio.py  qwen_tts_tool.py  requirements.txt  studio_manual.md  studio_orchestrator.py  studio_run.py
configs/: README.md  qwen_voices.json  roles.json  studio_roles.json
core/llm_engines/: __init__.py  minimax.py
core/tts_engines/: __init__.py  base.py  minimax.py
docs/: COMPLETE_ARCHITECTURE_REPORT.md  ENUM_ANALYSIS_SUMMARY.md  ENUM_MIGRATION_GUIDE.md  MIGRATION_GUIDE.md  OPTIMIZATION_SUMMARY.md  QWEN_OPTIMIZATION.md  STRINGLY_TYPED_CODE_ANALYSIS.md  TROUBLESHOOTING.md  TTS_CONFIG_REFACTOR_ANALYSIS.md
examples/: concurrent_processing.py  enums_usage_demo.py  qwen_engines_demo.py
references/: configs_guide.md  troubleshooting.md  user_manual.md
references/configs/: README.md  minimax_voices.json  studio_roles.json
scripts/: install.sh  test_voices.py
scripts/studio/: audio_utils.py  content_studio.py  minimax_tts_tool.py  paths.py  qwen_omni_studio.py  qwen_omni_tts_tool.py  qwen_tts_tool.py  studio_orchestrator.py
services/: api_client.py  audio_processor.py
src/: __init__.py
src/adapters/: __init__.py  audio_adapters.py  llm_adapters.py  tts_adapters.py
src/cli/: __init__.py  config_utils.py  paths.py  qwen_tts_studio.py  studio_orchestrator.py  studio_run.py
src/core/: __init__.py  enums.py  tts_config.py
src/core/llm_engines/: __init__.py  base.py  minimax.py  qwen.py
src/core/tts_engines/: __init__.py  minimax.py  qwen_omni.py  qwen_tts.py
src/entities/: errors.py  voice_config.py
src/infrastructure/: __init__.py  cli.py  config_manager.py  container.py
src/services/: __init__.py  api_client.py  audio_processor.py  audio_utils.py  config.py  sse_parser.py
src/use_cases/: __init__.py  dialogue_speech.py  studio_podcast.py  tts_use_cases.py
src/utils/: __init__.py  fallback.py
src/voiceforge/: __init__.py
src/voiceforge/audio/: __init__.py  processor.py  utils.py
src/voiceforge/clients/: __init__.py  base.py  minimax.py  qwen.py
src/voiceforge/engines/: __init__.py
src/voiceforge/engines/llm/: __init__.py  minimax.py  qwen.py
src/voiceforge/engines/tts/: __init__.py  minimax.py  qwen_omni.py  qwen_tts.py
src/voiceforge/entities/: __init__.py  audio_segment.py  engine_result.py  enums.py  errors.py  tts_request.py  voice_config.py
src/voiceforge/fallback/: __init__.py  executor.py
src/voiceforge/infrastructure/: __init__.py  cli.py  container.py
src/voiceforge/protocols/: __init__.py  engine.py  processor.py
src/voiceforge/use_cases/: __init__.py  dialogue.py  podcast.py  synthesize.py
tests/: 2026Q1宏观经济报告.txt  conftest.py  debate.txt  demo_segments.json  run_tests.sh  test_case_b.sh  test_case_c.sh  test_install.sh  test_minimax_tts.py  test_qwen_omni_tts.py  test_summary.txt
tests/test_entities/: test_entities.py
tests/test_fallback/: test_fallback.py
tests/test_infrastructure/: test_container.py
tests/test_use_cases/: test_fallback.py  test_use_cases.py
