[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-content-studio"
version = "1.2.1"
description = "专业级 AI 音频内容创作工具 - 三引擎编排播客制作系统"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AI Content Studio Team"}
]
keywords = [
    "ai",
    "tts",
    "podcast",
    "audio-generation",
    "speech-synthesis",
    "minimax",
    "qwen",
    "dashscope"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"

dependencies = [
    "requests>=2.28.0",
    "tenacity>=8.0.0",
    "pydub>=0.25.0",
    "rich>=13.0.0",
    "cachetools>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/hrygo/ai-content-studio"
Documentation = "https://github.com/hrygo/ai-content-studio#readme"
Repository = "https://github.com/hrygo/ai-content-studio.git"
Issues = "https://github.com/hrygo/ai-content-studio/issues"

[project.scripts]
# Clean Architecture CLI 入口
ai-studio = "src.infrastructure.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
src = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
