[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voiceforge"
version = "2.0.0"
description = "VoiceForge — 专业级 AI 音频内容创作工具，三引擎编排播客制作系统"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "VoiceForge Team"}
]
keywords = [
    "ai", "tts", "podcast", "audio-generation",
    "speech-synthesis", "minimax", "qwen", "dashscope",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"

dependencies = [
    "requests>=2.28.0",
    "tenacity>=8.0.0",
    "pydub>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.4.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/hrygo/voiceforge"
Documentation = "https://github.com/hrygo/voiceforge#readme"
Repository = "https://github.com/hrygo/voiceforge.git"
Issues = "https://github.com/hrygo/voiceforge/issues"

[project.scripts]
voiceforge = "voiceforge.infrastructure.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["voiceforge*"]

[tool.setuptools.package-data]
voiceforge = ["py.typed"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
